Align elements with some fixes

--- a/main.css
+++ b/main.css
@@ -46,3 +46,16 @@ h2{
   color: #F8F8F8;
   font-size: 25px;
 }
+.useradmin{
+  padding: 100px;
+}
+.adduser{
+  margin-top: 5px;
+  margin-left: 600px;
+
+
+}
+.addusergeneral{
+  
+
+}
